@@ -157,12 +157,12 @@ pk_cmd_info_types (int argc, struct pk_cmd_arg argv[], uint64_t uflags)
 }
 
 const struct pk_cmd info_var_cmd =
-  {"variable", "", "", 0, NULL, pk_cmd_info_var,
-   "info variable", NULL};
+  {"variables", "", "", 0, NULL, pk_cmd_info_var,
+   "info variables", NULL};
 
 const struct pk_cmd info_fun_cmd =
-  {"function", "", "", 0, NULL, pk_cmd_info_fun,
-   "info funtion", NULL};
+  {"functions", "", "", 0, NULL, pk_cmd_info_fun,
+   "info funtions", NULL};
 
 const struct pk_cmd info_types_cmd =
   {"types", "", "", 0, NULL, pk_cmd_info_types,
